필수 입력 정보

--- a/index.css
+++ b/index.css
@@ -86,3 +86,11 @@
 body {
   font-family: 'Pretendard-Regular';
 }
+
+.Draftail-Editor .DraftEditor-root {
+  height: 100vh !important;
+}
+
+.demo-wrapper {
+  background-color: red !important;
+}
