text-editor css 수정

--- a/index.css
+++ b/index.css
@@ -91,6 +91,6 @@ body {
   height: 100vh !important;
 }
 
-.demo-wrapper {
-  background-color: red !important;
+.text-editor {
+  background-color: aqua !important;
 }
