--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
 :root {
   font-family: 'Pretendard-Regular';
 }
+body {
+  overflow-x: hidden;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
