--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,14 @@
 :root {
   font-family: 'Pretendard-Regular';
 }
+
 body {
   overflow-x: hidden;
+  min-height: 100vh;
+}
+
+#root {
+  min-height: 100vh;
 }
 
 @tailwind base;
