--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,14 @@
 }
 
 body {
-  overflow-x: hidden;
   min-height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 #root {
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 @tailwind base;
