--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
   position: absolute;
   opacity: 0.15;
   width: 30%;
-  height: 10rem;
+  height: 20rem;
   background-image: linear-gradient(
     to bottom,
     #f65db4,
@@ -73,13 +73,13 @@
   z-index: 0;
   top: 0rem;
   width: 30%;
-  right: 20%;
+  right: 0%;
   opacity: 0.15;
 }
 .gradient-2 {
   z-index: 0;
-  top: 0;
-  right: -20%;
+  bottom: 10%;
+  left: 20%;
   overflow-x: hidden;
   background-image: linear-gradient(
     to bottom,
