--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,8 @@
 @import './components/common/TextEditor.css';
-.App {
-  text-align: center;
+.main {
+  height: calc(100vh - 137px);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-.app {
-  width: 100vw;
-  overflow-x: hidden;
-  min-height: 100%;
-}
-
-#root {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.App-link {
-  color: #61dafb;
-}
 .gradient,
 .gradient-2 {
   transform-origin: top left;
