--- a/src/index.css
+++ b/src/index.css
@@ -6,19 +6,18 @@
   font-style: normal;
 }
 
+#root {
+  height: 100vh;
+}
 :root {
   font-family: 'Pretendard-Regular';
 }
 
-body {
+body,
+html {
   min-height: 100vh;
   width: 100vw;
-  overflow-x: hidden;
-}
-
-#root {
-  min-height: 100vh;
-  overflow-x: hidden;
+  margin: 0 auto;
 }
 
 @tailwind base;
