--- a/src/components/common/TextEditor.css
+++ b/src/components/common/TextEditor.css
@@ -854,7 +854,7 @@
   overflow: auto;
   box-sizing: border-box;
   border: 1px solid var(--text-editor-border);
-  padding: 0 0.3rem;
+  padding: 0.3rem;
   min-height: 200px;
   background: var(--text-editor-background);
   border-radius: 4px;
