--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
-@import ('./src/styles/font.css') @tailwind base;
+@import ('./src/styles/font.css');
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
