회원가입 페이지

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import './components/common/TextEditor.css';
 
 .main {
-  height: calc(100vh - 137px);
+  min-height: calc(100vh - 155px);
 }
 
 .gradient,
