--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,40 @@
   );
 }
 
+.dark .gradient-2 {
+  background: linear-gradient(
+    to bottom,
+    rgba(37, 212, 105, 0.1),
+    rgba(140, 197, 65, 0.15),
+    rgba(189, 180, 53, 0.15),
+    rgba(221, 161, 70, 0.15),
+    rgba(236, 145, 98, 0.2),
+    rgba(242, 136, 116, 0.2),
+    rgba(242, 130, 136, 0.2),
+    rgba(235, 128, 156, 0.15),
+    rgba(234, 126, 173, 0.15),
+    rgba(228, 126, 191, 0.15),
+    rgba(217, 129, 210, 0.2),
+    rgba(200, 134, 229, 0.2)
+  );
+}
+
+.dark .gradient {
+  background-image: linear-gradient(
+    to bottom,
+    rgba(246, 93, 180, 0.15),
+    rgba(226, 112, 204, 0.15),
+    rgba(203, 129, 221, 0.2),
+    rgba(178, 144, 231, 0.2),
+    rgba(156, 153, 235, 0.25),
+    rgba(135, 169, 244, 0.25),
+    rgba(115, 180, 248, 0.25),
+    rgba(99, 191, 249, 0.2),
+    rgba(68, 208, 254, 0.2),
+    rgba(44, 224, 252, 0.15),
+    rgba(58, 238, 244, 0.15)
+  );
+}
 .Toastify__toast-body {
   font-family: 'Pretendard-Regular';
 }
