--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,23 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'JalnanGothic';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_231029@1.1/JalnanGothic.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 #root {
   height: 100vh;
   overflow-y: scroll;
 }
 :root {
   font-family: 'Pretendard-Regular';
+}
+
+.Jalnan {
+  font-family: 'JalnanGothic';
 }
 
 body,
